# hermes

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  MEMORY.md  README.md  SOUL.md  USER.md  antisecta_email_tracker.json  config.yaml  models.json
.github/: PULL_REQUEST_TEMPLATE.md
core/: hrm23_preflight.py
docs/: auth-execution-discipline-contour.md  behavior-exams.md  decision-log-protocol.md  logs-first-debugging-protocol.md  manual-behavior-exams.md  memory-vault-usage.md  profile-auth-discipline-patch.md  progress-detector-protocol.md  runtime-metrics-protocol.md  safe-script-review-protocol.md  session-summary-protocol.md  skill-priority-system.md  task-state-protocol.md
hermes-agent/: run_agent.py
hermes-automation/: .gitignore  README.md  pyproject.toml  requirements.txt
hermes-automation/config/: providers.yaml
hermes-automation/harness/: __init__.py  cli.py
hermes-automation/harness/capabilities/: blockers.py  browser.py  click.py  mail.py  recon.py  redaction.py  state.py
hermes-automation/harness/engine/: actions.py  executor.py  index_updater.py  result.py  retry.py
hermes-automation/sandbox_app/: app.py
hermes-automation/sites/: golden_onboarding.yaml  index.yaml
hermes-automation/tests/: test_blockers.py  test_browser.py  test_cli.py  test_golden_flow.py  test_imports.py  test_mail.py  test_mail_integration.py  test_state.py
hermes_agent/: __init__.py
memory/: README.md
migrations/: 002_add_foreign_keys_and_wal.sql
plans/: ROADMAP.md  eni-memory-v2-spec.md  gpt55-selfimprovement-loop.md  p1-implementation.md  (+2 more)
(+156 files in other folders)
