[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-automation"
version = "0.1.0"
description = "Hermes Web Automation Harness — declarative browser automation with checkpoints"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.52.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "flask>=3.0",
]

[project.scripts]
hermes-automation = "harness.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
